[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Track0.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Hud.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="Hover Car" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
max_speed = 100
reverse_speed = -20
player_controlled = true

[node name="Hover Car2" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 0 )
max_speed = 100
reverse_speed = -20

[node name="Hover Car3" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0 )
max_speed = 100
reverse_speed = -20

[node name="Track" parent="." index="3" instance=ExtResource( 3 )]

[node name="Hud" parent="." index="4" instance=ExtResource( 4 )]

[connection signal="lap_completed" from="Track" to="." method="_on_Track_lap_completed"]

[connection signal="_joystick_axis_changed" from="Hud/Touch Joystick" to="." method="_on_Touch_Joystick__joystick_axis_changed"]

[connection signal="_joystick_pressed" from="Hud/Touch Joystick" to="." method="_on_Touch_Joystick__joystick_pressed"]

[connection signal="_joystick_released" from="Hud/Touch Joystick" to="." method="_on_Touch_Joystick__joystick_released"]


[editable path="Hud"]
